--- a/exercises/dialogs.html
+++ b/exercises/dialogs.html
@@ -13,13 +13,20 @@
 			} else {
 				alert("Too Bad.");
 			};
+
+			var age = prompt("What is your age, in years?");
+			var name = prompt("What is your name?");
+
+			function alertUser(e){
+			alert(name + " is " + age + 
+				" years old.");
+
+
 		}
 
-		function alertUser(e){
-			alert("Button Pressed")
-
-
 		}
+
+
 
 	</script>
 
